Prevented wrapping-form-item-list error messages from increasing the width of the item.

--- a/Core/EnterpriseWebFramework/StaticFiles/styles/basic.css
+++ b/Core/EnterpriseWebFramework/StaticFiles/styles/basic.css
@@ -295,6 +295,13 @@ ewfGridFormItemList > ewfFormItemListItem, ewfGridFormItemList > ewfFormItemList
 	/* see https://stackoverflow.com/a/66689926/35349 */
 	min-width: 0;
 }
+ewfWrappingFormItemList > ewfFormItemListItem, ewfWrappingFormItemList > ewfFormItemListButtonItem {
+	width: min-content;
+}
+ewfWrappingFormItemList > ewfFormItemListItem > ewfFormItemListItemLabel, ewfWrappingFormItemList > ewfFormItemListItem > ewfFormItemListItemContent,
+ewfWrappingFormItemList > ewfFormItemListButtonItem > ewfFormItemListItemLabel, ewfWrappingFormItemList > ewfFormItemListButtonItem > ewfFormItemListItemContent {
+	width: max-content;
+}
 ewfWrappingFormItemList > ewfFormItemListButtonItem,
 ewfGridFormItemList:not(.ewfGvaT):not(.ewfGvaB):not(.ewfGvaC):not(.ewfGvaS) > ewfFormItemListButtonItem {
 	align-self: end;
